imgur for upload logo

--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -95,9 +95,9 @@
 				    	<div class='row verticalAlign'>
 					    	<div class='col-md-6'>
 						        {{#if logo}}
-						            <h4 class="">Current Theme</h4>
+						            <h4 class="">Current Logo</h4>
 						        {{else}}
-						            <h2>There is currently no theme to display for your business</h2>
+						            <h2>There is currently no logo to display for your business</h2>
 						        {{/if}}
 						    </div>
 						    <div class='col-md-6'>
