--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -1,5 +1,5 @@
 <section class="content-header">
-    <h1>Dashboard </h1>
+    <h1>Settings </h1>
     <div id="txt" class="pull-right"></div>
     <h1 class="pull-right" id="currentDate"></h1>
 </section>
@@ -127,17 +127,17 @@
             <div class="col-md-6">
     			<div class ="box box-primary col-md-6">
     			    <div class="box-header with-border">
-    			        <h3 class='box-title'>Upload/Choose a New Theme</h3>
-    			        <p style="color:grey">Upload your own theme to match your office.</p>
+    			        <h3 class='box-title'>Upload a New Background</h3>
+    			        <p style="color:grey">Upload your own background to match your office.</p>
     			    </div>
     			    <form id="uploadForm" enctype="multipart/form-data" action="/uploadlogo" method="post">
     				    <div class='box-body text-center' >
     				    	<div class='row verticalAlign'>
     					    	<div class='col-md-6'>
     						        {{#if logo}}
-    						            <h4 class="">Current Theme</h4>
+    						            <h4 class="">Current Background</h4>
     						        {{else}}
-    						            <h2>There is currently no theme to display for your business</h2>
+    						            <h2>There is currently no background to display for your business</h2>
     						        {{/if}}
     						    </div>
     						    <div class='col-md-6'>
