--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -71,7 +71,7 @@
         <header>
             <div class="header-content">
                 <div class="header-content-inner">
-                    <h1>The Old Rules Of Waiting Are Over. <br/> I AM SUPREME LEADER.</h1>
+                    <h1>The Old Rules Of Waiting Are Over.</h1>
                     <hr>
                     <p>Let us help you revolutionize your patient waiting experience with effortless check-in, form management, arrival notification, and appointment integration for your office.</p>
                     <a href="/register" class="btn btn-primary btn-xl page-scroll tryBtn" onclick="tryClick()">Try It Today</a>
