--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -159,23 +159,23 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/test_zpsedcsiaxd.jpg" alt="test">
+                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review1_zpsyjcrug77.jpg" alt="Review1">
                         </div>
 
                         <div class="item">
-                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/test_zpsedcsiaxd.jpg" alt="test2">
+                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review4_zpsxjfaxaed.jpg" alt="Review2">
                         </div>
 
                         <div class="item">
-                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/test_zpsedcsiaxd.jpg" alt="test3">
+                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review3_zpseo2hjc7o.jpg" alt="Review3">
                         </div>
 
                         <div class="item">
-                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/test_zpsedcsiaxd.jpg" alt="test4">
+                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review2_zpsdhgb9ulw.jpg" alt="Review4">
                         </div>
 
                         <div class="item">
-                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/test_zpsedcsiaxd.jpg" alt="test5">
+                            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review3_zpseo2hjc7o.jpg" alt="Review3">
                         </div>
                     </div>
 
