--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -71,7 +71,7 @@
         <header>
             <div class="header-content">
                 <div class="header-content-inner">
-                    <h1>The Old Rules Of Waiting Are Over. <br/> I AM SUPREME LEADER.</h1>
+                    <h1>The Old Rules Of Waiting Are Over.</h1>
                     <hr>
                     <p>Let us help you revolutionize your patient waiting experience with effortless check-in, form management, arrival notification, and appointment integration for your office.</p>
                     <a href="/register" class="btn btn-primary btn-xl page-scroll tryBtn" onclick="tryClick()">Try It Today</a>
@@ -97,8 +97,7 @@
                         <i class="fa fa-pencil-square-o fa-5x" style="color:#ffae00"></i>
                         <br><br>
                         <p class="overviewColor align-overview-mobile">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
-                            uectetur tortor id, pharetra lorem.
+                            Quickly and easily sign up an account with Enque.
                         </p>
                     </div>
 
@@ -107,8 +106,7 @@
                         <i class="fa fa-file-text-o fa-5x" style="color:#ffae00"></i>
                         <br><br>
                         <p class="overviewColor align-overview-mobile">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
-                            uectetur tortor id, pharetra lorem.
+                            Start off by generating a personal check in form for your company by simply dragging and dropping boxes and buttons.
                         </p>
                     </div>
 
@@ -117,8 +115,7 @@
                         <i class="fa fa-tablet fa-5x" style="color:#ffae00"></i>
                         <br><br>
                         <p class="overviewColor align-overview-mobile">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
-                            uectetur tortor id, pharetra lorem.
+                            Deploy your form on any device with a browser. Tablets and mobile devices are also supported.
                         </p>
                     </div>
 
@@ -127,8 +124,7 @@
                         <i class="fa fa-users fa-5x" style="color: #ffae00;"></i>
                         <br><br>
                         <p class="overviewColor align-overview-mobile">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
-                            uectetur tortor id, pharetra lorem.
+                            Our system will begin assisting you in keeping track of appointments and help manage your customers.
                         </p>
                     </div>
 
