Added 'Coming Soon to Dashboard of business owners

--- a/views/business/dashboard-business.handlebars
+++ b/views/business/dashboard-business.handlebars
@@ -8,5 +8,7 @@
     {{#if message}}
         <div class="alert alert-danger">{{message}}</div>
     {{/if}}
-
+    <div style = "width: 50%; margin: 0 auto;">
+        <img src="http://i25.photobucket.com/albums/c97/evilsmith/resizeAnalytics_zpsrfxnhb9b.png" alt="Analytics">
+    </div>
 </section>
