Switched from Google Analytics to Mixpanel. Got rid of analytics on Peter's page. New dashboard coming real soon!

--- a/views/business/dashboard-admin.handlebars
+++ b/views/business/dashboard-admin.handlebars
@@ -183,6 +183,7 @@
 
   </section>
       
+      <!--
       <div id="view-selector-container" style="display: none;"></div>
 
       <div id="embed-api-auth-container"></div>
@@ -190,9 +191,10 @@
       <div id="chart-container"></div>
       <p>Browser Types</p>
       <div id="main-chart-container"></div>
+    -->
 
     <!--Analytics-->
     <script src='/javascripts/analytics.js'></script>
 
-  {{> googleAnalytics}}
+    <!--{{> googleAnalytics}}-->
 </div>
