--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -385,6 +385,7 @@
                 </div>
             </div>
         </footer>
+        <div><body onload="homeview()"></body></div>
 
         <script>
             $('body').scrollspy({
@@ -392,6 +393,6 @@
                 offset: 51
             })
         </script>
-        {{> googleAnalytics}}
+        <!--{{> googleAnalytics}}-->
     </body>
 </html>
