--- a/views/business/register.handlebars
+++ b/views/business/register.handlebars
@@ -67,7 +67,8 @@
                 </div>
             </div>
         </footer>
-        {{> googleAnalytics}}
+        <div><body onload="registerview()"></body></div>
+        <!--{{> googleAnalytics}}-->
     </body>
 
 </html>
