--- a/views/business/login.handlebars
+++ b/views/business/login.handlebars
@@ -12,6 +12,9 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+        <!--Analytics-->
+        <script src='/javascripts/analytics.js'></script>
     </head>
 
     <body>
@@ -80,6 +83,7 @@
                 </div>
             </div>
         </footer>
+        <div><body onload="loginview()"></body></div>
     </body>
 
 </html>
