--- a/views/business/dashboard-business.handlebars
+++ b/views/business/dashboard-business.handlebars
@@ -9,4 +9,32 @@
         <div class="alert alert-danger">{{message}}</div>
     {{/if}}
 
+ <div class="row">
+         <div class="col-md-12">
+             <div class="box box-info">
+                 <div class="box-header with-border">
+                     <h3 class="box-title">Patient List</h3>
+ 
+                     <div class="box-tools pull-right">
+                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
+                                 class="fa fa-minus"></i>
+                         </button>
+                     </div>
+                 </div>
+                 <!-- /.box-header -->
+                 <div class="box-body">
+   
+                     <!-- /.table-responsive -->
+                 </div>
+                 <!-- /.box-body -->
+                 <div class="box-footer clearfix">
+                     <a href="#" class="btn btn-sm btn-success btn-flat pull-right">Check In</a>
+                     <a href="#" class="btn btn-sm btn-warning btn-flat pull-right">Check Out</a>
+                     <a href="#" class="btn btn-sm btn-info btn-flat pull-right">Reschedule</a>
+                 </div>
+                 <!-- /.box-footer -->
+             </div>
+         </div>
+     </div>
+
 </section>
