--- a/views/business/visitor-list.handlebars
+++ b/views/business/visitor-list.handlebars
@@ -3,7 +3,6 @@
     <div id="txt" class="pull-right"></div>
     <h1 class="pull-right" id="currentDate"></h1>
 </section>
-
 <section class="content">
     {{#if message}}
         <div class="alert alert-danger">{{message}}</div>
@@ -36,7 +35,7 @@
                             </thead>
                             <tbody id="appointment-list">
                             {{#each patients}}
-                                <tr>
+                                <tr onclick = "highlight()">
                                     <td>{{visitor}}</td>
                                     <td>{{doctor}}</td>
                                     <td>{{apptTime}}</td>
@@ -51,9 +50,9 @@
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer clearfix">
-                    <a href="#" class="btn btn-sm btn-success btn-flat pull-right">Check In</a>
-                    <a href="#" class="btn btn-sm btn-warning btn-flat pull-right">Check Out</a>
-                    <a href="#" class="btn btn-sm btn-info btn-flat pull-right">Reschedule</a>
+                    <a href="#" class="btn btn-sm btn-success btn-flat pull-right" onclick = "checkIn()">Check In</a>
+                    <a href="#" class="btn btn-sm btn-warning btn-flat pull-right" onclick = "checkOut()">Check Out</a>
+                    <a href="#" class="btn btn-sm btn-info btn-flat pull-right" onclick = "reschedule()">Reschedule</a>
                 </div>
                 <!-- /.box-footer -->
             </div>
@@ -61,6 +60,7 @@
     </div>
 </section>
 
+<script src="../../business/visitor-list.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io(window.location.origin);
@@ -98,4 +98,6 @@
     apptList.appendChild(appointment);
     
   });
+
+
 </script>
