--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -1,37 +1,31 @@
 <section class="content-header">
     <h1>Settings </h1>
-    <h1 class="" id="currentDate"></h1>
-    <div id="txt" class=""></div>
+    <div id="txt" class="pull-right"></div>
+    <h1 class="pull-right" id="currentDate"></h1>
 </section>
 
 <section class="content">
-	<div class="row" style="">
-		<div class='col-md-8'>
+	<div class="" style="">
+		<div class="box-body">
 			{{#if edited}}
-			<div class="box-body">
 				<div class="alert alert-success" role="alert">
 					{{edited}}
 				</div>
-			</div>
 			{{/if}}
 			{{#if alert}}
-			<div class="box-body">
 				<div class="alert alert-warning" role="alert">
 					{{alert}}
 				</div>
-			</div>
 			{{/if}}
 			{{#if message}}
-			<div class="box-body">
 			   <div class="alert alert-danger">{{message}}</div>
-			</div>
 			{{/if}}
 		</div>
 	</div>
 
 <!-- Row 1 -->
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-6">
 			<div class="box box-primary">
 				<div class="box-header with-border">
 					<h3 class='box-title'>Change Password</h3>
@@ -57,9 +51,8 @@
 				</form>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-8">
+
+		<div class="col-md-6">
 			<div class="box box-primary">
 				<div class="box-header with-border" >
 					<h3 class='box-title'>Update Contact Information</h3>
@@ -91,8 +84,8 @@
 {{#if isAdmin}}
  <!-- ROW 2 -->
 	<div class="row">
-		<div class="col-md-8">
-			<div class ="box box-primary">
+		<div class="col-md-6">
+			<div class ="box box-primary col-md-6">
 			    <div class="box-header with-border">
 			        <h3 class='box-title'>Upload a New Logo</h3>
 			        <p style="color:grey">Upload your own logo to match your office.</p>
@@ -127,12 +120,10 @@
 						    <input class ="btn btn-primary pull-right" type="submit" value="Upload Image" name="Upload Button"/>
 					</div>
 				</form>
-            </div>
-		</div>
-	</div>
+                </div>
+			</div>
 
             <!-- Change Theme -->
-            <!--
             <div class="col-md-6">
     			<div class ="box box-primary col-md-6">
     			    <div class="box-header with-border">
@@ -172,13 +163,12 @@
                     </div>
     			</div>
             </div>
-           	-->
 
 
 <!-- Row 3 -->
         <!-- Change company info -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div class="box box-primary">
                     <div class="box-header with-border" >
                         <h3 class='box-title'>Company Info</h3>
