--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -17,9 +17,8 @@
         </a>
         <h3 class="pull-left">Welcome, {{employeeName}}!</h3>
         <!-- Navbar Right Menu -->
-        <div class="navbar-custom-menu">
-            <a href="/login" class="btn btn-sm btn-info btn-flat pull-right">Logout</a>
-        </div>
+
+        <a href="/login" style="margin: 9px 14px 9px 0;" class="btn btn-sm btn-info btn-flat pull-right">Logout</a>
 
     </nav>
 </header>
