--- a/views/partials/sidebar-business.handlebars
+++ b/views/partials/sidebar-business.handlebars
@@ -13,7 +13,7 @@
             {{else}}
             <li class="{{patients}} treeview">
                 <a href="/dashboard">
-                    <i class="fa fa-navicon"></i> <span>Patients</span>
+                    <i class="fa fa-navicon"></i> <span>Visitor Queue</span>
                 </a>
             </li>
             {{/if}}
