--- a/views/business/visitor-list.handlebars
+++ b/views/business/visitor-list.handlebars
@@ -1,8 +1,8 @@
 <section class="content-header">
     <h1 style="display: inline-block;">Visitor Queue</h1>
     <div class="pull-right">
-        <p id="txt"></p>
-        <p id="currentDate"></p>
+        <div id="currentDate"></div>
+        <div id="txt"></div>
     </div>
 </section>
 
