--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,7 +15,7 @@
         <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
         </a>
-        <h3 class="pull-left">Welcome, {{employeeName}}!</h3>
+        <h3 class="pull-left welcome-message">Welcome, {{employeeName}}!</h3>
         <!-- Navbar Right Menu -->
 
         <a href="/login" style="margin: 9px 14px 9px 0;" class="btn btn-sm btn-info btn-flat pull-right">Logout</a>
