--- a/views/checkin/checkin.handlebars
+++ b/views/checkin/checkin.handlebars
@@ -29,7 +29,7 @@
         background-color: {{containerBg}};
     }
     footer {
-        position: static;
+        position: fixed;
         bottom: 0;
         width: 100%;
         height: 50px;
