--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -325,7 +325,7 @@
                             <div class="form-group">
                                 <label class="col-md-8 control-label"></label>
                                 <div class="col-md-4">
-                                    <button type="submit" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
+                                    <a href="#" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></a>
                                 </div>
                             </div>
 
