--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -204,7 +204,7 @@
                 <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <div class="panel price panel-green">
                         <div class="panel-heading arrow_box text-center">
-                            <h3>FREE</h3>
+                            <h3>FREE TRIAL</h3>
                         </div>
 
                         <!--Pricing-->
@@ -214,11 +214,9 @@
 
                         <!-- Features -->
                         <ul class="list-group list-group-flush text-center">
-                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Personal use
-                            </li>
-                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i>Unlimited
-                                projects
-                            </li>
+                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i>Customize Forms</li>
+                            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i>Unlimited Employees</li>
+                            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i>Unlimited Devices</li>
                             <li class="list-group-item"><i class="fa fa-times" id="chartX"></i>24/7 support</li>
                         </ul>
 
@@ -241,13 +239,10 @@
 
                         <!-- Features -->
                         <ul class="list-group list-group-flush text-center">
-                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Personal use
-                            </li>
-                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Unlimited
-                                projects
-                            </li>
-                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> 24/7 support
-                            </li>
+                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Customize Forms</li>
+                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Unlimited Employees</li>
+                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Unlimited Devices</li>
+                            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> 24/7 Support</li>
                         </ul>
 
                         <!--Button to purchase (No Function)-->
