--- a/views/partials/sidebar-business.handlebars
+++ b/views/partials/sidebar-business.handlebars
@@ -20,14 +20,14 @@
       {{#if isOwner}}
       <li class="treeview">
         <a href="/office/{{businessId}}/checkin">
-          <i class="fa fa-navicon"></i> <span>Sign In Screen</span>
+          <i class="fa fa-check-square-o"></i> <span>Sign In Screen</span>
         </a>
       </li>
       {{/if}}
       {{#if isOwner}}
-      <li class="treeview">
-        <a href="">
-          <i class="fa fa-navicon"></i> <span>Appointments</span>
+      <li class="{{appointments}} treeview">
+        <a href="/scheduleappointment">
+          <i class="fa fa-clock-o"></i> <span>Schedule Appointment</span>
         </a>
       </li>
       {{/if}}
@@ -42,7 +42,7 @@
       {{#if isOwner}}
       <li class="{{forms}} treeview">
         <a href="/forms">
-          <i class="fa fa-group"></i>
+          <i class="fa fa-pencil-square-o"></i>
           <span>Form Editor</span>
         </a>
       </li>
