--- a/views/checkin/done.handlebars
+++ b/views/checkin/done.handlebars
@@ -18,8 +18,8 @@
 
   .customBG {
     /*background-image: url(/images/bg/full/{{bg}});*/
-    /*background-image: url({{bg}});*/
-    background: linear-gradient(to bottom, rgba(242,97,0, 1), rgba(255,151,0, 0.2));
+    background-image: url({{bg}});
+    /* background: linear-gradient(to bottom, rgba(242,97,0, 1), rgba(255,151,0, 0.2)); */
   }
 
   .btn {
