--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -76,8 +76,7 @@
   display:block;
   margin-left: auto;
   margin-right:auto;
-  margin-bottom: 60px;
-  margin-top:2em;
+  margin-top:100px;
   z-index: 5;
 }
 
