done page styling added

--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -137,7 +137,7 @@
           <p style="color:grey">Pick a background color for your sign-in page to match your office.</p>
         </div>
         <form class="" action="/signinbackground" method="post">
-          <div class='box-body'>
+          <div class='box-body text-center'>
             <span>Select a color: </span>
             <input type="color" name="color" value="{{bg}}">
           </div>
