--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -1,5 +1,5 @@
-<!-- jQuery 2.2.0 -->
-<script src="/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <!-- Bootstrap 3.3.5 -->
 <script src="/javascripts/bootstrap.min.js"></script>
 <!-- FastClick -->
@@ -9,7 +9,4 @@
 <!-- SlimScroll 1.3.0 -->
 <script src="/plugins/slimScroll/jquery.slimscroll.min.js"></script>
 
-<script>
-    eid = "{{eid}}";
-</script>
 <script src="/javascripts/dashboard.js"></script>
