--- a/views/checkin/apptinfo.handlebars
+++ b/views/checkin/apptinfo.handlebars
@@ -1,82 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Confirm</title>
+  <title>Welcome</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/style.css'/>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-nav-wizard.css">
+  {{>styles}}
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
   <style>
-  body, h1, h2, h3, h4, h5, h6 {
-    color: {{containerText}} !important;
-  }
-
   .customBG {
-    background-image: url(/images/bg/full/{{bg}});
+    background: rgb({{bg.r}}, {{bg.g}}, {{bg.b}});
   }
 
-  .btn {
-    background-color: {{buttonBg}};
-    border-color: {{buttonBg}};
-    color: {{buttonText}}
-  }
-
-  .container {
+  .container-checkin {
     background-color: {{containerBg}};
+  }
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #071C33;
+  }
+  footer h4 {
+    color: #eeeeee;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    line-height: 50px;
+    font-weight: bold;
+    text-shadow: 0px 0px 8px #ffae00;
   }
   </style>
 </head>
 <body class="customBG">
-<div class="container container-margin centeredz">
-  <div class="row innerInfo">
-    <div class="nav-wizard-margins">
-      <h3>Your checkin process:</h3>
-      <ul class="nav nav-wizard">
-        <li><a href="#">Step 1: Identification</a></li>
-        <li class="active"><a href="#">Step 2: Confirm Appointment</a></li>
-        <li><a href="#">Step 3: Additional Information</a></li>
-        <li><a href="#">Step 4: Sign Disclosure Agreement</a></li>
-        <li><a href="#">Step 5: Checked In!</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="row innerInfo">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <h1>
-        <img src="/images/jennifer.jpg" style="width:140px" alt="">
-        Hi, {{name}}
-      </h1>
-      <p class="lead"><b>Appointment Time: 10:00 am</b></p>
-      <div class="col-md-4">
-        <p>Name</p>
-        <p>DOB</p>
-        <p>Email</p>
-      </div>
-      <div class="col-md-6">
-        <p><b>{{name}}</b></p>
-        <p><b>{{DOB}}</b></p>
-        <p><b>{{email}}</b></p>
+  <div>
+    <div class="row" style="margin-top: 150px; margin-bottom: 100px;">
+      <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 center-block" style="float:none; padding: 20px">
+        <div class="box">
+          <div class="box-header">
+            <h1>Hello, {{name}}!</h1>
+            <br>
+            <h3 class="box-title">Please verify that the information below is correct.</h3>
+          </div>
+          <div class="box-body">
+            <h4 class="lead">Appointment Time: <b>10:00 AM</b></h4>
+            <h4 class="lead">E-mail: <b>{{ email }}</b></h4>
+            <br>
+            <div class="row innerInfo">
+              <div class="col-md-6">
+                <form action="checkin" action="get">
+                  <button class="btn btn-lg btn-danger btn-block" type="submit">Not you?</button>
+                </form>
+              </div>
+              <div class="col-md-6">
+                <form action="customform">
+                  <button class="btn btn-lg btn-success btn-block" type="submit">Next</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <!-- /.container -->
-  <div class="row innerInfo">
-    <div class="col-md-4"></div>
-    <div class="col-md-2">
-      <form action="entercode">
-        <button class="btn btn-lg btn-danger btn-block" type="submit">Not you?</button>
-      </form>
-    </div>
-    <div class="col-md-2">
-      <form action="customform">
-        <button class="btn btn-lg btn-success btn-block" type="submit">Next</button>
-      </form>
-    </div>
-  </div>
-</div>
+  <footer>
+    <h4>Powered by ENQUÉ</h4>
+  </footer>
 </body>
 </html>
