--- a/views/checkin/customform.handlebars
+++ b/views/checkin/customform.handlebars
@@ -13,9 +13,6 @@
     background: rgb({{bg.r}}, {{bg.g}}, {{bg.b}});
   }
 
-  .container-checkin {
-    background-color: {{containerBg}};
-  }
   footer {
     position: fixed;
     bottom: 0;
@@ -44,17 +41,17 @@
             <h3 class="box-title">Please tell us a little bit more about yourself.</h3>
           </div>
           <div class="box-body">
-            <div class="row innerInfo">
-              <div id="form" class="col-md-8 col-md-offset-2"></div>
-            </div>
-            <br>
-            <div class="row innerInfo">
-              <div class="col-md-4 col-md-offset-4">
-                <form action="customform">
-                  <button class="btn btn-lg btn-success btn-block" type="submit">Next</button>
-                </form>
+            <form action="customform" method="post">
+              <div class="row innerInfo">
+                <div id="form" class="col-md-8 col-md-offset-2"></div>
               </div>
-            </div>
+              <br>
+              <div class="row innerInfo">
+                <div class="col-md-4 col-md-offset-4">
+                  <button class="btn btn-lg btn-success btn-block" type="submit">Next</button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
