--- a/views/business/register.handlebars
+++ b/views/business/register.handlebars
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav navbar-right navbar-landing-padding">
           <li>
             <!--<button type = "button" class = "btn btn-default navbar-btn">Navbar Button</button>-->
-            <a href="/login" class="page-scroll" style="color: #ffae00;">Log In</a>
+            <a href="/login" class="page-scroll" style="color: #00cccc;">Log In</a>
             <!--<a href="/login" class="btn custom-button page-scroll navbar-btn" id="login-btn-navbar">Log In</a>-->
           </li>
         </ul>
