--- a/views/checkin/checkin.handlebars
+++ b/views/checkin/checkin.handlebars
@@ -30,7 +30,7 @@
     margin: 0;
     line-height: 50px;
     font-weight: bold;
-    text-shadow: 0px 0px 8px #ffae00;
+    text-shadow: 0px 0px 8px #00cccc;
   }
   </style>
 </head>
